# automate-brightwheel

./: .gitignore  .gitmodules  .mise.toml  .pdm.toml  LICENSE  README.md  Taskfile.yaml  add_exif.py  download.js  generate_js.py  merge_data_json.py  pyproject.toml  ruff.toml
photos/audrey/: data.json
photos/eleanor/: data.json
photos/leland/: data.json
