[project]
name = "automate-brightwheel"
version = "1.0.0"
description = "Automate downloading photos from the Brightwheel site"
authors = [
    {name = "Bryan Weber", email = "bryan.w.weber@gmail.com"},
]
dependencies = [
    "jmespath>=1.0.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.4.0",
    "flake8>=5.0.4",
    "black>=22.6.0",
]

[tool.pdm.scripts]
exif = {call = "add_exif:pdm_entry"}
source = {call = "generate_js:pdm_entry"}
merge = {call = "merge_data_json:pdm_entry"}
