[project]
description = "Default template for PDM package"
authors = [{ name = "Bryan Weber", email = "bryan.w.weber@gmail.com" }]
dependencies = [
    "jmespath>=1.0.1",
]
requires-python = ">=3.10"
license = { text = "MIT" }
name = "automate-brightwheel"
version = "2024.01.0"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.22.1",
    "ruff>=0.2.2",
]

[tool.pdm.scripts]
exif = { call = "add_exif:pdm_entry" }
source = { call = "generate_js:pdm_entry" }
merge = { call = "merge_data_json:pdm_entry" }
